[tool.poetry]
name = "h2ogpt-client"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
include = ["h2ogpt_client/_h2ogpt*"]

[tool.poetry.dependencies]
python = "^3.8"
gradio-client = "^0.2.7"

[tool.poetry.group.test.dependencies]
pytest = "7.2.2"
pytest-asyncio = "^0.21.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
black = "^23.3.0"
flake8 = "5.0.4"
isort = "^5.12.0"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
py_version = "auto"

[tool.flake8]
max-line-length = 88

[tool.mypy]
python_version = "3.8"

[tool.pytest.ini_options]
pythonpath = "h2ogpt_client"
log_cli = true
log_cli_level = "INFO"
